# uKanren_transformations

./: .gitignore  findBest.sh  mktransform.cabal  runCheck.sh  runTest.sh  uKanren-transformations.cabal
ocanrenTest/: Makefile  _tags  a.native
ocanrenTest/SpaceForTests/: Makefile  pathInGraph_run.native
ocanrenTest/SpaceForTests/_build/: _digests  _log
ocanrenTest/SpaceForTests/_build/src/: pathInGraph.cmi  pathInGraph.cmo  pathInGraph.cmx  pathInGraph.ml.depends  (+5 more)
ocanrenTest/SpaceForTests/src/: pathInGraph.ml
ocanrenTest/_build/: _digests  _log
ocanrenTest/_build/src/: a.cmi  a.cmo  a.cmx  a.ml  a.ml.depends
ocanrenTest/_build/src2/: a.cmi  a.cmo  a.cmx  a.ml.depends
ocanrenTest/src/: a.ml  bottles.ml  dAppTest.ml  double_appendo_test.ml  is_path_and_other_test.ml  max_lengtho_test.ml  sortoTest.ml  unify.ml  unifyTest.ml  unify_todo.ml
ocanrenTest/src2/: a.ml  a_old.ml  max_lengtho_test.ml  sorto_test.ml
ocanrenTest/src_example/: a_run.ml  c.ml  maxoCP.ml
src/: CPD.hs  CharacteristicAtoms.hs  CharacteristicTreesPrinter.hs  DTResidualize.hs  DTree.hs  Driver.hs  Driving.hs  Eval.hs  FullUnfold.hs  GlobalControl.hs  GlobalControlCA.hs  GlobalTreePrinter.hs  Main.hs  MuKanren.hs  OCanrenize.hs  Programs.hs  Purification.hs  RandUnfold.hs  Residualization.hs  Residualize.hs  SeqUnfold.hs  Syntax.hs  ToProlog.hs  Tree.hs  TreePrinter.hs  Unfold.hs
src/programs/: List.hs  LogicInterpreter.hs
test/: CpdTest.hs  DrivingTest.hs  EmbedTest.hs  Main.hs  OCanrenizeTest.hs  PrintingTest.hs  ToPrologTest.hs  UnfoldTest.hs
utils/: ConjRetriever.hs
