name: mktransform
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
     

executable mktransform
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        containers -any,
        doctest -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Driver
        MuKanren
        Residualization
        Programs
    ghc-options: -ferror-spans

test-suite test-mktransform
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        containers -any,
        doctest -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
